@@ -3,13 +3,11 @@ package com.github.johanfredin.springdataextensions.service;
 import com.github.johanfredin.springdataextensions.domain.ChangeDateHolder;
 import com.github.johanfredin.springdataextensions.domain.Identifiable;
 import com.github.johanfredin.springdataextensions.repository.BaseRepository;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 
 import java.io.Serializable;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 
 /**
  * Basic service to contain the basic CRUD functionality for our services.
@@ -17,21 +15,17 @@ import java.util.List;
  * sent to a corresponding {@link BaseRepository} implementation class.
  *
  * @param <E> Any JPA entity extending {@link Identifiable}
- * @param <F> Any class extending {@link BaseRepository}
+ * @param <R> Any class extending {@link BaseRepository}
  * @author johan
  */
-public interface ServiceBase<ID extends Serializable, E extends Identifiable<ID>, F extends BaseRepository<ID, E>> {
+public interface ServiceBase<ID extends Serializable, E extends Identifiable<ID>, R extends BaseRepository<ID, E>> {
 
     /**
      * Get the repository implementation
      *
      * @return
      */
-    F getRepository();
-
-    default E save(E entity) {
-        return getRepository().save(entity);
-    }
+    R getRepository();
 
     /**
      * This method takes for granted that the entity is persisted.
@@ -50,40 +44,35 @@ public interface ServiceBase<ID extends Serializable, E extends Identifiable<ID>
         return save(entity);
     }
 
-    default E saveAndFlush(E entity) {
-        return getRepository().saveAndFlush(entity);
+    default E save(E entity) {
+        return getRepository().save(entity);
     }
 
-    default List<E> save(Iterable<E> entities) {
+    default Iterable<E> saveAll(Iterable<E> entities) {
         return getRepository().saveAll(entities);
     }
 
-    @SuppressWarnings("unchecked")
-    default List<E> save(E... entities) {
-        return save(Arrays.asList(entities));
+    default Optional<E> findById(ID id) {
+        return getRepository().findById(id);
     }
 
-    default E findOne(ID id) {
-        return getRepository().getOne(id);
+    default boolean existsById(ID id) {
+        return getRepository().existsById(id);
     }
 
-    default List<E> findAllById() {
+    default Iterable<E> findAll() {
         return getRepository().findAll();
     }
 
-    default List<E> findAllById(Iterable<ID> ids) {
-        return getRepository().findAllById(ids);
+    default Iterable<E> findAllById(Iterable<ID> longs) {
+        return getRepository().findAllById(longs);
     }
 
-    default Page<E> findAllById(Pageable pageable) {
-        return getRepository().findAll(pageable);
+    default long count() {
+        return getRepository().count();
     }
 
-    default List<E> findAllById(Sort sort) {
-        return getRepository().findAll(sort);
-    }
-
-    default void delete(ID id) {
+    default void deleteById(ID id) {
         getRepository().deleteById(id);
     }
 
@@ -91,30 +80,23 @@ public interface ServiceBase<ID extends Serializable, E extends Identifiable<ID>
         getRepository().delete(entity);
     }
 
-    default void delete(Iterable<? extends E> entities) {
+    default void deleteAll(Iterable<? extends E> entities) {
         getRepository().deleteAll(entities);
     }
 
-    @SuppressWarnings("unchecked")
+    default void deleteAll() {
+        getRepository().deleteAll();
+    }
+
+    default List<E> save(E... entities) {
+        return saveAll(new ArrayList<>(List.of(entities)));
+    }
+
     default void delete(E... entities) {
-        delete(Arrays.asList(entities));
+        deleteAll(List.of(entities));
     }
 
-    default void deleteInBatch(Iterable<E> entities) {
-        getRepository().deleteInBatch(entities);
+    default List<E> saveAll(List<E> entities) {
+        return saveAll(entities);
     }
-
-    default boolean existsById(ID id) {
-        return getRepository().existsById(id);
-    }
-
-    default long count() {
-        return getRepository().count();
-    }
-
-    default void flush() {
-        getRepository().flush();
-    }
-
-
 }
